[gd_scene load_steps=3 format=2]

[ext_resource path="res://Base/Character.gd" type="Script" id=1]
[ext_resource path="res://Base/Inventory.tscn" type="PackedScene" id=2]

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="DeathSprite" type="Sprite" parent="."]
visible = false

[node name="AttackSprite" type="Sprite" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]

[node name="HitBox" type="Area2D" parent="."]

[node name="HitBoxCollider" type="CollisionShape2D" parent="HitBox"]

[node name="AttackArea" type="Area2D" parent="."]

[node name="AttackAreaCollider" type="CollisionShape2D" parent="AttackArea"]

[node name="Inventory" parent="." instance=ExtResource( 2 )]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
